初步完成建筑物数据的获取

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,12 +12,12 @@
             "env": {
                 "FLASK_APP": "main.py",
                 "FLASK_ENV": "development",
-                "FLASK_DEBUG": "0"
+                "FLASK_DEBUG": "1"
             },
             "args": [
                 "run",
                 "--no-debugger",
-                "--no-reload"
+                // "--no-reload"
             ],
             "jinja": true
         }
