基本完成训练、预测前端页面的开发

--- a/webmap/package.json
+++ b/webmap/package.json
@@ -36,10 +36,15 @@
     ],
     "rules": {
       "no-console": "off",
-      "no-debugger": "off"
+      "no-debugger": "off",
+      "no-undef": "off",
+      "no-implicit-globals": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "globals": {
+      "config": true
     }
   },
   "postcss": {
