--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,8 @@ venv.bak/
 .mypy_cache/
 
 .vscode/settings.json
-robosat.pink
-ds
-robosat_geoc
+
+# generate by robosat_geoc
+data
+data/model
+dataset
